Place Order with delivary Charge

--- a/Areas/Customer/Views/Home/Cart.cshtml
+++ b/Areas/Customer/Views/Home/Cart.cshtml
@@ -372,16 +372,12 @@
             <!--coupon code area start-->
             <div class="coupon_area">
                 <div class="row">
-                   @*  <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-6">
                         <div class="coupon_code left">
-                            <h3>Coupon</h3>
-                            <div class="coupon_inner">
-                                <p>Enter your coupon code if you have one.</p>
-                                <input placeholder="Coupon code" type="text">
-                                <button type="submit">Apply coupon</button>
-                            </div>
+                            <h3>Conditions</h3>
+                            <p>Extra Delivary charge will be applicable  when It's over it's limit</p>
                         </div>
-                    </div> *@
+                    </div>
 
 
                     @if (Model.Count != 0)
