Update Delivary charge in User Orders

--- a/Areas/Customer/Views/Order/UserOrders.cshtml
+++ b/Areas/Customer/Views/Order/UserOrders.cshtml
@@ -87,8 +87,9 @@
                 </div>
                 <div class="col-md-3 text-center">
 
-                    <p><strong>Order No:</strong> @order.OrderNo</p>
+                @*     <p><strong>Order No:</strong> @order.OrderNo</p> *@
                     <p><strong>Order Date:</strong> @order.OrderDate.ToShortDateString()</p>
+                    <p><strong>Delivary Charge:</strong> @order.DeliveryCharge ৳</p>
                     <p><strong>Total Price:</strong> @order.TotalPrice ৳</p>
                 </div>
                 <div class="col-md-3 text-center">
