--- a/Areas/Customer/Views/Order/OrderDetails.cshtml
+++ b/Areas/Customer/Views/Order/OrderDetails.cshtml
@@ -26,7 +26,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h4 class="card-title">Payment Information</h4>
-                    <p><strong>Payment Method:</strong> @Model.PaymentMethods :  @Model.CardInfo</p>
+                    <p><strong>Payment Method:</strong> @Model.PaymentMethods   @Model.CardInfo</p>
                     <p><strong>Total Price: ৳</strong> @Model.TotalPrice</p>
                     <p><strong>Delivery Charge: ৳</strong> @Model.TotalDelivaryCharge</p>
                     <p><strong>Discount:% </strong> @Model.TotalDiscount</p>
