--- a/Areas/Customer/Views/Order/AllOrders.cshtml
+++ b/Areas/Customer/Views/Order/AllOrders.cshtml
@@ -23,6 +23,7 @@
             </div>
             <div class="col-md-4 d-flex align-items-end">
                 <button type="submit" class="btn btn-primary">Filter Orders</button>
+                <a asp-area="Customer" style="margin-left:10px" asp-controller="Order" asp-action="AllOrders" class="btn btn-success"><i class="fa-solid fa-bag-shopping"></i>All Orders</a>
             </div>
         </div>
     </form>
