Withdraw history of Rider and Farmer

--- a/Areas/Farmer/Views/FarmerShop/Index.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Index.cshtml
@@ -34,9 +34,9 @@
                <br />
 
                 <h4 class="mt-5">Total Revenue: @Model.ShopRevenue</h4>
-                <a class="btn btn-success" asp-area="Farmer" asp-controller="FarmerShop" asp-action="MoneyWithdraw">  Money Withdraw </a>
 
-            
+                <a href="@Url.Action("Wallet", "Inventory")" class="btn btn-primary">My Wallet</a>
+
             </div>
 
           
