--- a/Areas/Rider/Views/Rider/RiderDashboard.cshtml
+++ b/Areas/Rider/Views/Rider/RiderDashboard.cshtml
@@ -15,7 +15,7 @@
         <div class="col-md-4">
             <h4>Actions</h4>
             <a href="@Url.Action("RequestWithdraw", "Rider")" class="btn btn-primary">Request Withdrawal</a>
-            <a href="@Url.Action("RiderRevenueDetails", "Rider")" class="btn btn-secondary">View Revenue Details</a>
+            <a href="@Url.Action("WithdrawHistory", "Rider")" class="btn btn-secondary">Withdraw History</a>
         </div>
     </div>
 </div>
