Complete Wallet and payment

--- a/Areas/Customer/Views/UserProfile/Deshboard.cshtml
+++ b/Areas/Customer/Views/UserProfile/Deshboard.cshtml
@@ -141,6 +141,10 @@
                             <dt class="col-sm-4">Manage Shop:</dt>
                             <dd class="col-sm-8"> <a asp-area="Rider" style="margin-left:10px" class="btn btn-info" asp-controller="Rider" asp-action="Riders" class="nav-link">Manage Rider</a> </dd>
 
+                            
+                            <dt class="col-sm-4">Manage Wallet:</dt>
+                            <dd class="col-sm-8"> <a asp-area="Admin" style="margin-left:10px" class="btn btn-info" asp-controller="Wallet" asp-action="AllWithdrawals" class="nav-link">Wallet</a> </dd>
+
                             <dt class="col-sm-4">Other Setting:</dt>
                             <dd class="col-sm-8">   <a asp-area="Identity" class="btn btn-danger" style="margin-left:10px" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a> </dd>
                         }
