--- a/Areas/Admin/Views/Wallet/AllWithdrawals.cshtml
+++ b/Areas/Admin/Views/Wallet/AllWithdrawals.cshtml
@@ -7,6 +7,8 @@
     <h4 class="justify-content-center text-center">Confirmed Withdrawals in @DateTime.Now.ToString("MMMM yyyy")</h4>
     <br />
 
+    <a href="@Url.Action("AdminViewWithdrawals", "Wallet")" style="margin-left:110px" class="btn btn-primary">Manage Withdraw</a>
+    <br />
     @if (!Model.Any())
     {
         <p>No confirmed withdrawals for this month.</p>
