--- a/Areas/Farmer/Views/FarmerShop/FarmerShop.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/FarmerShop.cshtml
@@ -1,6 +1,5 @@
 ﻿@model List<OrganicOption.Models.FarmerShop>
-<br />
-<br />
+
 
 <div class="row">
     <div class="col-md-6">
@@ -23,6 +22,8 @@
 </div>
 
 
+<br />
+<br />
 <div class="row">
     @foreach (var shop in Model)
     {
@@ -45,3 +46,36 @@
         </div>
     }
 </div>
+
+<script>
+    function getUserLocation() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(showPosition, showError);
+        } else {
+            alert("Geolocation is not supported by this browser.");
+        }
+    }
+
+    function showPosition(position) {
+        document.getElementById("latitude").value = position.coords.latitude;
+        document.getElementById("longitude").value = position.coords.longitude;
+    }
+
+    function showError(error) {
+        switch (error.code) {
+            case error.PERMISSION_DENIED:
+                alert("User denied the request for Geolocation.");
+                break;
+            case error.POSITION_UNAVAILABLE:
+                alert("Location information is unavailable.");
+                break;
+            case error.TIMEOUT:
+                alert("The request to get user location timed out.");
+                break;
+            case error.UNKNOWN_ERROR:
+                alert("An unknown error occurred.");
+                break;
+        }
+    }
+</script>
+
