--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
 
                                 <a asp-action="AllShop" asp-area="Farmer" asp-controller="FarmerShop"><i class="zmdi zmdi-collection-music"></i> Shop <i class="zmdi zmdi-caret-down"></i></a>
                         <ul class="sub_menu pages">
-                           <li><a href="blog-details.html">blog details</a></li>
+                                    <li><a href="Customer/Blog">blog details</a></li>
                            <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
                            <li><a href="blog-sidebar.html">blog sidebar</a></li>
                         </ul>
