--- a/Areas/Customer/Views/UserProfile/Deshboard.cshtml
+++ b/Areas/Customer/Views/UserProfile/Deshboard.cshtml
@@ -145,6 +145,9 @@
                             <dt class="col-sm-4">Manage Wallet:</dt>
                             <dd class="col-sm-8"> <a asp-area="Admin" style="margin-left:10px" class="btn btn-info" asp-controller="Wallet" asp-action="AllWithdrawals" class="nav-link">Wallet</a> </dd>
 
+                            <dt class="col-sm-4">Manage Blog:</dt>
+                            <dd class="col-sm-8"> <a asp-area="Customer" style="margin-left:10px" class="btn btn-info" asp-controller="Blog" asp-action="BlogManager" class="nav-link">Blog Manage</a> </dd>
+
                             <dt class="col-sm-4">Other Setting:</dt>
                             <dd class="col-sm-8">   <a asp-area="Identity" class="btn btn-danger" style="margin-left:10px" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a> </dd>
                         }
