Feedback controller with view

--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -134,8 +134,8 @@
                         <a href="#"><i class="zmdi zmdi-star"></i> pages <i class="zmdi zmdi-caret-down"></i></a>
                         <ul class="sub_menu pages">
                            <li><a href="about.html">About Us</a></li>
-                           <li><a href="services.html">services</a></li>
-                           <li><a href="portfolio.html">portfolio</a></li>
+                           <li><a href="Customer/Feedback">View Feedback</a></li>
+                                    <li><a href="Customer/Feedback/Create">FeedBack</a></li>
                            <li><a href="faq.html">Frequently Questions</a></li>
                            <li><a href="contact.html">contact</a></li>
                          
