Product Price CRUD

--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
                                  <a href="#">Product Types</a>
                                  <ul>
                                     <li><a href="product-details.html">product details</a></li>
-                                    <li><a href="product-sidebar.html">product sidebar</a></li>
+                                    <li><a href="Admin/ProductPrice/TodayPrice">product Price</a></li>
                                     <li><a href="product-grouped.html">product grouped</a></li>
                                     <li><a href="variable-product.html">product variable</a></li>
                                  </ul>
