--- a/Areas/Customer/Views/UserProfile/Deshboard.cshtml
+++ b/Areas/Customer/Views/UserProfile/Deshboard.cshtml
@@ -147,6 +147,10 @@
 
                             <dt class="col-sm-4">Manage Blog:</dt>
                             <dd class="col-sm-8"> <a asp-area="Customer" style="margin-left:10px" class="btn btn-info" asp-controller="Blog" asp-action="BlogManager" class="nav-link">Blog Manage</a> </dd>
+                            
+                            <dt class="col-sm-4">Manage Price:</dt>
+                            <dd class="col-sm-8"> <a asp-area="Admin" style="margin-left:10px" class="btn btn-info" asp-controller="ProductPrice" asp-action="Index" class="nav-link">Product Price</a> </dd>
+
 
                             <dt class="col-sm-4">Other Setting:</dt>
                             <dd class="col-sm-8">   <a asp-area="Identity" class="btn btn-danger" style="margin-left:10px" asp-page="/Account/Manage/ChangePassword" title="Manage"> Password Section</a> </dd>
