Nearby Rider with delivary

--- a/Areas/Rider/Views/Rider/Index.cshtml
+++ b/Areas/Rider/Views/Rider/Index.cshtml
@@ -57,7 +57,7 @@
                                 <a asp-action="UpdateShift" asp-area="Rider" asp-controller="Rider" class="btn btn-danger">Finish Shift</a>
                             </div>
 
-                            <a asp-action="MyOffer" asp-area="Customer" asp-controller="Order" class="btn btn-warning"> Go for Deleary</a>
+                            <a asp-action="MyOffer" asp-area="Rider" asp-controller="RiderOffer" class="btn btn-warning"> Go for Deleary</a>
                         </div>
                     </div>
                 }
