Rider Accept offer issue solve

--- a/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
+++ b/Areas/Rider/Views/RiderOffer/MyOffer.cshtml
@@ -59,7 +59,7 @@
                 <hr />
                 <div class="text-center">
                     @*                     <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("CreateDeliveryForAcceptedOrder", "Order")'">Accept Offer</button> *@
-                    <a asp-area="Customer" asp-controller="Order" asp-action="CreateDeliveryForAcceptedOrder" class="btn btn-primary">Accept Offer</a>
+                    <a asp-area="Rider" asp-controller="RiderOffer" asp-action="CreateDeliveryForAcceptedOrder" class="btn btn-primary">Accept Offer</a>
                     <button type="button" class="btn btn-secondary" onclick="window.location.reload(true)">Next Offer</button>
                 </div>
             </div>
